# bids-validator-deno

./: .gitignore  LICENSE.txt  README.md  hatch_build.py  pdm_build.py  pyproject.toml
.github/workflows/: build_verify_publish.yml  build_wheels.yml  pypi-whl.yml
src/bids_validator_deno/: __about__.py  __init__.py  __main__.py
src/bids_validator_deno/cli/: __init__.py
tools/pypi-whl/: README.md  pdm_build.py  pyproject.toml
