[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bids-validator-deno"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Isaac To", email = "candleindark@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/Isaac To/bids-validator-deno#readme"
Issues = "https://github.com/Isaac To/bids-validator-deno/issues"
Source = "https://github.com/Isaac To/bids-validator-deno"

[project.scripts]
bids-validator-deno = "bids_validator_deno.cli:bids_validator_deno"

[tool.hatch.build.targets.wheel]
only-include = ["src/bids_validator_deno", "artifacts/bids-validator"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"artifacts" = "bids_validator_deno/bin"

[tool.hatch.version]
path = "src/bids_validator_deno/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bids_validator_deno tests}"

[tool.coverage.run]
source_pkgs = ["bids_validator_deno", "tests"]
branch = true
parallel = true
omit = [
  "src/bids_validator_deno/__about__.py",
]

[tool.coverage.paths]
bids_validator_deno = ["src/bids_validator_deno", "*/bids-validator-deno/src/bids_validator_deno"]
tests = ["tests", "*/bids-validator-deno/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
