[build-system]
requires = ["pdm-backend", "wheel", "requests"]
build-backend = "pdm.backend"

[tool.pdm.build]
is-purelib = false
# includes = ["src"]
excludes = ["dist/*", "lib/*", ".gitignore"]

[tool.pdm.build.wheel-data]
scripts = ["dist/bids-validator", "dist/bids-validator.exe"]

[project]
name = "bids-validator-deno"
dynamic = ["version"]
description = 'TODO'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["bids"]
authors = [
  { name = "Isaac To", email = "candleindark@gmail.com" },
]
version = '0.0.14'  # TODO switch to use versioningit to base off the git tag, and add appropriate git tag for the release
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/candleindark/bids-validator-deno#readme"
Issues = "https://github.com/candleindark/bids-validator-deno/issues"
Source = "https://github.com/candleindark/bids-validator-deno"

